@@ -51,7 +51,6 @@ class TestEntryPrinter(cmptest.TestCase):
         # Print out the entries and parse them back in.
         oss1 = io.StringIO()
         oss1.write('option "plugin_processing_mode" "raw"\n')
-        oss1.write('option "experiment_query_directive" "TRUE"\n')
         printer.print_entries(entries1, file=oss1)
         entries2, errors, __ = loader.load_string(oss1.getvalue())
 
@@ -61,7 +60,6 @@ class TestEntryPrinter(cmptest.TestCase):
         # Print out those reparsed and parse them back in.
         oss2 = io.StringIO()
         oss2.write('option "plugin_processing_mode" "raw"\n')
-        oss2.write('option "experiment_query_directive" "TRUE"\n')
         printer.print_entries(entries2, file=oss2)
         entries3, errors, __ = loader.load_string(oss2.getvalue())
 
@@ -201,7 +199,6 @@ class TestEntryPrinter(cmptest.TestCase):
     @loader.load_doc()
     def test_Query(self, entries, errors, __):
         """
-        option "experiment_query_directive" "TRUE"
         2014-06-08 query "cash" "SELECT SUM(position) WHERE currency = 'USD'"
         """
         self.assertRoundTrip(entries, errors)
